# rusty

./: Cargo.toml  README.md
docs/: CNAME  _config.yml  index.md
docs/_posts/: 2024-12-22-fresh_machine.md  2024-12-25-root_password_login.md  2024-12-26-root_password_login.md
src/: main.rs
